# dq-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  showme.sh
.github/workflows/: fake-traffic-streamlit.yml
dashboard/: README.md  dash-dqtools.py  data_quality_score.py  dq_mart.duckdb  dqtools.py  duckdbdemo.duckdb  export_dq_marts.py  requirements.txt
dashboard/utils/: chart.py  db.py  dqtools.py  ui.py  yaml.py
dbt/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/models/mart/: schema.yml
dbt/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
