[tool.poetry]
name = "dq-demo"
version = "0.1.0"
description = ""
authors = ["Dat Nguyen <dat@infinitelambda>"]
readme = "README.md"
packages = [{include = "dq_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-snowflake = "^1.4.2"
dbt-duckdb = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
